--- a/jade/mixins/mixins.jade
+++ b/jade/mixins/mixins.jade
@@ -62,14 +62,33 @@ mixin cualidad(name,texto)
 		span.fa(class=name)
 		span=texto
 
-mixin portafolio(name,image,titulo,url)
+mixin portafolio(href,href2,name,image,titulo,p)
 	.mix.category-1(class=name)
-		.ih-item.square.effect8.scale_up.colored
-			a(href="#")
-				.img
-					img(src="img/"+image+".png")
-				.info
-					h3=titulo
-					a(href=url)
+		.carta
+			.lado.frente
+				img.w-100(src="img/"+image+".png")
+			.lado.atras
+				h4=titulo
+				.texto.text-left
+					p Tecnologías usadas:
+					if (p==1)
+						p Css 
+						p Html5
+						p Bootstrap
+					else if (p==2)
+						P Html5
+						p Sass 
+						p Bootstrap
+					else if (p==3)
+						p Sass
+						p Jade
+						p Bootstrap
+					else if (p==4)
+						p Css
+						p Js
+						p Bootstrap
+				a(href=href2 target="_blank") Ver código
+					span.fa.fa-github
+				a(href=href target="_blank") Visitar página
 					span.fa.fa-arrow-right
 
