--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -28,7 +28,7 @@
 		    			top:0;
 		    			left:0;
 		    			height:100%;
-		    			max-width: 100%;
+		    			width: 110px;
 		    			resize: horizontal;
 		    			overflow: hidden;
 		    		}
