actualizando portafolio foto

--- a/css/main.css
+++ b/css/main.css
@@ -6038,7 +6038,7 @@ a:hover {
         background-size: cover;
         position: relative; }
         .banner .marco-pantalla .cont-pantalla .imagen1 .imagen2 {
-          background-image: url("../img/Blog-Responsive.png");
+          background-image: url("../img/portfolio_1.png");
           position: absolute;
           background-size: cover;
           top: 0;
