--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -188,7 +188,7 @@
 	    		background-size:cover;
 	    		position:relative;
 	    		.imagen2{
-	    			background-image:url('../img/Blog-Responsive.png');
+	    			background-image:url('../img/portfolio_1.png');
 	    			position:absolute;
 	    			background-size:cover;
 	    			top:0;
