--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -324,8 +324,8 @@
 
 	}
 	.foto{
-		width: 300px;
-		height: 300px;
+		//width: 300px;
+		//height: 300px;
 		border-radius: 50%;
 		display: inline-block;
 		background-image:url("../img/sobre_mi2.jpg"); 
