--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -1,4 +1,9 @@
 @media screen and (min-width: 992px )  {
+	.foto{
+		margin-top:2rem;
+		width: 300px;
+		height: 300px;
+	}
 	.banner{
 	background-size:120%;
 	}
@@ -24,6 +29,11 @@
 
 
 @media screen and (min-width: 768px )  and (max-width: 992px ) {
+	.foto{
+		margin-top:2rem;
+		width: 200px;
+		height: 200px;
+	}
 		.banner{
 			background-size:150%;
 		}
@@ -48,9 +58,17 @@
 
 
 @media screen and (max-width: 768px) {
-		.banner{
+.foto{
+	margin-top:2rem;
+	width: 200px;
+	height: 200px;
+}
+
+
+
+	.banner{
 			background-size:250%;
-		}
+	}
 
 .nav-1{
     margin-top: 50% ;
