main sobre mi fot

--- a/css/main.css
+++ b/css/main.css
@@ -5925,8 +5925,8 @@ a:hover {
 @media screen and (min-width: 768px) and (max-width: 992px) {
   .foto {
     margin-top: 2rem;
-    width: 200px;
-    height: 200px; }
+    width: 300px;
+    height: 300px; }
   .banner {
     background-size: 150%; }
   .nav-1 {
@@ -5937,10 +5937,11 @@ a:hover {
     height: 150px; } }
 
 @media screen and (max-width: 768px) {
+  .mg-10 {
+    margin-top: 3.10rem; }
   .foto {
-    margin-top: 2rem;
-    width: 200px;
-    height: 200px; }
+    width: 220px;
+    height: 220px; }
   .banner {
     background-size: 250%; }
   .nav-1 {
