--- a/jade/index.jade
+++ b/jade/index.jade
@@ -92,7 +92,7 @@ include mixins/mixins.jade
 									+cualidad("fa-users","Equipo")
 									+cualidad("fa-laptop","Compañero")
 
-						.col-sm-5.text-center
+						.col-sm-5.text-center.mg-10
 							.foto
 
 			.w-100#lemas
