--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -31,8 +31,8 @@
 @media screen and (min-width: 768px )  and (max-width: 992px ) {
 	.foto{
 		margin-top:2rem;
-		width: 200px;
-		height: 200px;
+		width: 300px;
+		height: 300px;
 	}
 		.banner{
 			background-size:150%;
@@ -58,32 +58,34 @@
 
 
 @media screen and (max-width: 768px) {
-.foto{
-	margin-top:2rem;
-	width: 200px;
-	height: 200px;
-}
+	.mg-10{
+		margin-top:3.10rem;
+	}
+	.foto{
 
+		width: 220px;
+		height: 220px;
+	}
 
 
 	.banner{
 			background-size:250%;
 	}
 
-.nav-1{
-    margin-top: 50% ;
+	.nav-1{
+	    margin-top: 50% ;
 
-}
+	}
 
-.name{
-	font-size: 3rem;
-}
+	.name{
+		font-size: 3rem;
+	}
 
 
-#logo{
-	//z-index:10;
-    height: 80px;
-}
+	#logo{
+		//z-index:10;
+	    height: 80px;
+	}
 
 
 
