--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,7 +5,7 @@ include mixins/mixins.jade
 			meta(charset="UTF-8")
 			title Sarita Coder
 			link(rel="stylesheet", href="font-awesome/css/font-awesome.min.css")
-			link(rel="icon" type="image/png" href="img/SARITA-02.png" )
+			link(rel="icon" type="image/png" href="img/icon.png" )
 			meta(name="viewport" content="width=device-width, initial-scale=1")
 			link(rel="stylesheet", href="css/animate.css")
 			link(rel="stylesheet", href="css/main.css")
